emulator.yml
apiVersion: v1
kind: Pod
metadata:
  name: watchguard-firebox-log-udp
  namespace: elk
spec:
  containers:
    - name: watchguard-firebox-log-udp
      image: docker.elastic.co/observability/stream:v0.10.0
      ports:
      - containerPort: 9528
        name: fire-svc
      command: ["/stream"]
      args: ["log", "--start-signal=SIGHUP", "--delay=5s", "--addr", "elastic-agent:9528", "-p=udp", "/sample_logs/watchguard_firebox.log"]
      volumeMounts:
        - name: watchguard-logs
          mountPath: /sample_logs
          readOnly: true
  volumes:
    - name: watchguard-logs
      configMap:
        name: watchguard-firebox-log-config
