os-in-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mini-ubuntu
  namespace: elk  # Change to your desired namespace if needed
  labels:
    app.kubernetes.io/name: mini-ubuntu
spec:
  containers:
  - name: mini-ubuntu-container
    image: ubuntu:latest
    ports:
      - containerPort: 9528
        name: elastic-agentsv
    command: ["/bin/bash", "-c", "sleep infinity"]  # Keeps the container running
    resources:
      limits:
        memory: "4Gi"
        cpu: "2"
    securityContext:
      privileged: false  # Optional, but explicitly prevents elevated privileges
    volumeMounts:
    - mountPath: /data
      name: data-volume
  volumes:
  - name: data-volume
    emptyDir: {}  # A temporary directory deleted when the pod stops
