service-for-elastic-agent.yml
apiVersion: v1
kind: Service
metadata:
  name: elastic-agent
  namespace: elk
spec:
  selector:
    app.kubernetes.io/name: gora-agent  
  ports:
  - name: svc-port
    protocol: UDP
    port: 9528
    targetPort: 9528
